edits from yesterday

--- a/Appendices/Background_treatmenteffects.tex
+++ b/Appendices/Background_treatmenteffects.tex
@@ -72,6 +72,21 @@ Note: This table shows the High-risk Index (HRI) for ABC. A score of 11 or more 
 	\end{figure}
 \end{center}
 
+Table~\ref{tab:abccare-baseline} compares pre-program variables between experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. This indicates that males were slightly less advantaged at baseline. However, we do not account for multiple hypotheses meaning that with an $\alpha$ level of 10\%, we would expect, on average, one significant result out of ten hypotheses.\footnote{\citet{Romano_Wolf_2005_JASA}.}
+
+\begin{table}[H]
+\centering
+\caption{Baseline Differences, ABC/CARE}
+\label{tab:abccare-baseline}
+\begin{threeparttable}
+	\input{output/abccare-baseline}
+\begin{tablenotes}
+\footnotesize
+\item Note: The variables in this table are all measured at the baseline age, close to when the children were born. A larger HRI (High Risk Index) score indicates more disadvantage. Apgar, measured at 1 and 5 minutes after birth, is a test of the health condition of newborn babies. A score closer to 10 indicates a healthier condition \citep{Apgar_1966_APGAR-Scoring_PCNA}. Birthweight is in pounds and gestational age is in weeks.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
 \subsection{Randomization Protocol and Compromises} \label{appendix:randomization}
 
 \noindent Randomization compromises throughout ABC's and CARE's implementations pose a challenge when evaluating the programs' effects. We discuss each case of compromise in detail. Figure~\ref{fig:abc-flow} and Figure~\ref{fig:care-flow} are flow charts that depict the sample from the first-phase randomization through the last data follow-up accounting for all cases of attrition and non-compliance.\\
@@ -359,3 +374,21 @@ Note: This plot shows the number of participants in ABC for whom there exists da
 \input{output/health_balance_care_1}
 
 \noindent Overall, these tables indicate a balance between the treatment and control groups, both when considering center-based childcare and family education and only family education as treatment.
+
+\subsubsection{Summary of Data Collection} \label{appendix:data-collection}
+
+Data across a wide range of outcomes were collected for ABC and CARE at similar time points. Table~\ref{tab:abc-care-data} summarizes the data collection for both programs. A varied battery of measures of cognitive, social-emotional, and parenting skills were administered during the intervention and while the children were in school. Adult follow-ups are available at ages 21, 30, and 34, with administrative crime records and biomarker health data available at age 34.
+
+\begin{table}[H]
+\centering
+\caption{ABC and CARE Data Collection}
+\label{tab:abc-care-data}
+\begin{threeparttable}
+\footnotesize
+	\input{output/abc-care-variables}
+\begin{tablenotes}
+\footnotesize
+\item Note: This table provides an abbreviated summary of the variables available in ABC and CARE. The cognitive and social-emotional categories listed are a subset of the full list of measured skills. Ages followed by m.\ are in months. All other ages are in years. Ages with an asterisk (*) are only present in ABC.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
