--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -20,45 +20,20 @@ CARE included an additional arm of treatment. In addition to the services listed
 \end{threeparttable}
 \end{table}
 
-Table~\ref{tab:abccare-baseline} compares pre-program variables between experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. This indicates that males were slightly less advantaged at baseline. However, we do not account for multiple hypotheses meaning that with an $\alpha$ level of 10\%, we would expect, on average, one significant result out of ten hypotheses.\footnote{\citet{Romano_Wolf_2005_JASA}.}
+Figure~\ref{fig:family-over-time} gets at one aspect in which the subjects were disadvantaged. For a more detailed description of the sample's disadvantage, see Appendix~\ref{appendix:background}. The figure shows the evolution of the fathers' presence over time. At birth, there were few fathers present, especially for the females in the treatment group. After birth, the proportion of fathers present, conditional being present at birth, remains stable.
 
-\begin{table}[H]
-\centering
-\caption{Baseline Differences, ABC/CARE}
-\label{tab:abccare-baseline}
-\begin{threeparttable}
-	\input{output/abccare-baseline}
-\begin{tablenotes}
-\footnotesize
-\item Note: The variables in this table are all measured at the baseline age, close to when the children were born. A larger HRI (High Risk Index) score indicates more disadvantage. Apgar, measured at 1 and 5 minutes after birth, is a test of the health condition of newborn babies. A score closer to 10 indicates a healthier condition \citep{Apgar_1966_APGAR-Scoring_PCNA}. Birthweight is in pounds and gestational age is in weeks.
-\end{tablenotes}
-\end{threeparttable}
-\end{table}
-
-Figure~\ref{fig:family-over-time} complements Table~\ref{tab:abccare-baseline} by showing the evolution of the family characteristics during and after treatment, by gender. Conditional on the father being present at baseline, the his presence is fairly constant through age 8. The females in the treatment group have fewer present father than all the other groups.
-
-\textbf{[JJH: This goes in web appendix. Look at \underline{controls} outcomes: male vs female. Then treatment effects (value added). How much is the gap closed?]}
+\textbf{[JJH: This goes in web appendix. Look at \underline{controls} outcomes: male vs female. Then treatment effects (value added). How much is the gap closed?][We moved the table to the appendix. The analysis you request is now explained in the introduction and Section 6.]}
 
 \begin{figure}[H]
-\textbf{[JJH: Father Present?][Yes. Title is now changed.] [JJH: Verbally summarize; too busy.]}
+\textbf{[JJH: Father Present?][Yes. Title is now changed.] [JJH: Verbally summarize; too busy.][We adjusted this figure accordingly.]}
 \begin{center}
-\caption{Family Characteristics Over Time}
+\caption{Father Present, Over Time}
 \label{fig:family-over-time}
-	\begin{subfigure}[b]{0.49\textwidth}
-		\centering
-		\caption{Father Present}
 		\label{fig:fhome}
-			\includegraphics[width=\textwidth]{output/family-fhome}
-	\end{subfigure}
-	\begin{subfigure}[b]{0.49\textwidth}
-		\centering
-		\caption{Number of Siblings}
-		\label{fig:hhsibs}
-			\includegraphics[width=\textwidth]{output/family-hhsibs}
-	\end{subfigure}
+			\includegraphics[width=0.65\textwidth]{output/family-fhome}
 \end{center}
 \footnotesize \justify
-Note: These plots describe the family and preschool characteristics in the data. The bars in Plot (a) after baseline are conditional on the father being at home at baseline. The bars represent the proportion of father's presence. The bars in Plot (b) represent the mean number of siblings by group.
+Note: The bars represent the proportion of father's presence. The bars after baseline are conditional on the father being at home at baseline.
 \end{figure}
 
 \subsection{Randomization Protocol and Compromises} \label{section:randomization}
@@ -92,24 +67,5 @@ Children in the control group who are enrolled in alternative early childcare pr
 
 While most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era, they were relatively low quality compared to ABC/CARE.\footnote{Appendix~\ref{appendix:tetanus} discusses the federal standards of that day. See \citet{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach, Burchinal_Campbell_etal_1997_CD}.}$^,$\footnote{When we compare ABC/CARE treatment to these alternatives, ABC/CARE has substantial treatment effects. Further, as we argue below, parents perceived that ABC/CARE was superior to the alternatives.} The access of control-group children to alternative programs affects the interpretation of estimated treatment effects, as we discuss next.
 
-\subsection{Data Collection} \label{section:data-collection}
 
-\textbf{[JJH: Appendix.]}
-
-Data across a wide range of outcomes were collected for ABC and CARE at similar time points. Table~\ref{tab:abc-care-data} summarizes the data collection for both programs. A varied battery of measures of cognitive, social-emotional, and parenting skills were administered during the intervention and while the children were in school. Adult follow-ups are available at ages 21, 30, and 34, with administrative crime records and biomarker health data available at age 34.
-
-\begin{table}[H]
-\centering
-\caption{ABC and CARE Data Collection}
-\label{tab:abc-care-data}
-\begin{threeparttable}
-\footnotesize
-	\input{output/abc-care-variables}
-\begin{tablenotes}
-\footnotesize
-\item Note: This table provides an abbreviated summary of the variables available in ABC and CARE. The cognitive and social-emotional categories listed are a subset of the full list of measured skills. Ages followed by m.\ are in months. All other ages are in years. Ages with an asterisk (*) are only present in ABC.
-%See Appendix~\ref{} for more information on the available measures of skills.
-\end{tablenotes}
-\end{threeparttable}
-\end{table}
-
+\textbf{[JJH: Appendix.][We moved the section summarizing the data collection to the appendix.]}
